--- a/config.yaml
+++ b/config.yaml
@@ -13,10 +13,11 @@ MODEL:
     POOLER_RESOLUTION: 7
     POOLER_SAMPLING_RATIO: 2
   SparseRCNN:
-    NUM_PROPOSALS: 4
-    NUM_CLASSES: 4
+    NUM_PROPOSALS: 100
+    NUM_CLASSES: (8,)
+    MULTI_HEAD_TRAIN: (True,)
 SOLVER:
-  BASE_LR: 0.001
+  BASE_LR: 0.000025
   IMS_PER_BATCH: 2
   STEPS: []
   MAX_ITER: 31150                # num_epochs * steps_per_epoch
@@ -53,7 +54,7 @@ DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: False
   NUM_WORKERS: 2
 DATASETS:
-  TRAIN: ("Quadrant_train",) # 623 images --> 312 steps per epochs for batch_size 2
-  TEST:  ("Quadrant_val",) # 70 images
+  TRAIN: ("Enumeration_train",) # 623 images --> 312 steps per epochs for batch_size 2
+  TEST:  ("Enumeration_val",) # 70 images
 VERSION: 2
-OUTPUT_DIR: "/content/drive/MyDrive/dentex/quadrant_outputs"
+OUTPUT_DIR: "/content/drive/MyDrive/dentex/enumeration_outputs"
